2007-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* CSharpCodeGenerator.cs : for GenericTypeParameter, GetTypeOutput()
	  should just print its name.
	  For generic type definition, print "<>". OutputTypeArguments() was
	  also causing IndexOutOfRangeException.

2006-12-30  Marek Habersack  <grendello@gmail.com>

	* CSharpCodeGenerator.cs: implement actual identifier syntax correctness
	checking, as defined in the C# standard (almost).

2006-08-08  Gert Driesen <drieseng@users.sourceforge.net>

	* CSharpCodeCompiler.cs: Added support for embedded resources, fixes
	bug #78384. Added support for linked resources. Removed unnecessary
	null check for options.ReferencedAssemblies.

2006-07-16  Andrew Skiba <andrews@mainsoft.com>

	* CSharpCodeCompiler.cs: find mono.exe in mono/mini; fixes #78731

2006-04-30  Marek Safar <marek.safar@seznam.cz>

	* CSharpCodeCompiler.cs: mcs does not like /r:"" syntax; fixes #78038.

2005-12-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: Override GeneratePrimitiveExpression to
	match .NET 1.x and 2.0 for float, decimal, char, ushort, uint, ulong
	and sbyte.

2005-11-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: No longer output semicolon and newline for
	CodeVariableDeclarationStatement in for statement, fixes #75292. 
	Fixed NRE in GenerateEventReferenceExpression. Cosmetic changes to 
	code generated for iteration to match MS.NET. Temporary reduce 
	indentation for label and no longer escape label if its a keyword.

2005-11-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: Fixed GenerateComment to also write
	comment chars for carriage-return (and skip linefeed, if its the
	next character). Fixed output for TryCatchFinallyStatement. Fixed
	GotoStatement to end with newline.

2005-11-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* CSharpCodeGenerator.cs: Ignore ChecksumData of CodeChecksumPragma
	if null.
